Some extra slides

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -138,6 +138,7 @@ input { font-family: inherit; }
       pre {
         max-width: calc(~'100vw - 40px');
         overflow: auto;
+        margin-bottom: 1em;
       }
 
       .good {
