--- a/styles/styles.less
+++ b/styles/styles.less
@@ -76,11 +76,11 @@ input { font-family: inherit; }
 
     header {
       background-color: @highlight;
-      padding: 20px 20px 20px 60px;
+      padding: 20px 30px 20px 60px;
       position: absolute;
       top: 40px;
       left: 0;
-      width: 75%;
+      max-width: 100vw;
 
       font-size: 2em;
 
@@ -124,6 +124,10 @@ input { font-family: inherit; }
 
       p {
         margin-bottom: 1em;
+
+        &.center {
+          text-align: center;
+        }
       }
 
       ul {
